[gd_scene load_steps=14 format=3 uid="uid://bmnsshbidjbrv"]

[ext_resource type="Script" uid="uid://cbfav3d0vu4a4" path="res://scripts/enemy.gd" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://d3i7oby44o1ml" path="res://assets/sprites/enemy-ships-Sheet.png" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://ce317hnhaqnma" path="res://scenes/explosion.tscn" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_md0e3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_md0e3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4w8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}],
"loop": true,
"name": &"enemy_1_idle",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_md0e3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_md0e3")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_md484"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("2_md0e3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("2_md0e3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8i8w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 5.0
height = 24.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_7p1mj")

[node name="Enemy1" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_c4w8v")
animation = &"enemy_1_idle"

[node name="Enemy2" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_md484")

[node name="Enemy3" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_w8i8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_md0e3")

[node name="Explosion" parent="." instance=ExtResource("3_4ra3w")]
visible = false

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, 14)

[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
